* All variations of the "send" operation now take `Into<Message>` instead of `Message` directly.
* All of the "close" functions now take `&self` instead of `self`.

=== Deprecated ===

=== Removed ===

* The `Body` type has been removed. Most applications do not need to touch the header, so it makes sense to mask the distinction between the body and header slightly.

=== Fixed ===

* The IPv4 address is now in the correct order. (#28)

=== Security ===

//------------------------------------------------------------------------------
// Past Releases
//------------------------------------------------------------------------------

== [nng-rs v0.5.0-rc.1] - 2019-04-14 ==

=== Added ===

* A new "unsafe options" set of traits have been added in order to expose options that are currently not safely handled.
	** Any of these options should be considered *unstable* as they will ideally be replaced with safe versions.
* The `IPC_SECURITY_DESCRIPTOR` has been added as the first "unsafe option".
* The `PAIR1_POLY` option has been added.
* The following traits are now implemented: (#18, #23)
	** `PipeEvent`: `Debug`, `Copy`, `Clone`, `Eq`, `PartialEq`, `Hash`
	** `Protocol`: `Eq`, `PartialEq`, `Hash`
	** `SocketAddr`: `Display`, `Eq`, `PartialEq`, `Hash`

=== Changed ===

* The `ErrorKind` type has been renamed to `Error` and the old `Error` type has been deleted.
	** Additionally, the `Hash` trait has been derived for the new `Error` type.
* `Error::ProtocolError` renamed to `Error::Protocol` in order to appease Clippy.
* `Message::try_from` was renamed to `Message::from_slice`.
* Uncaught panics in a callback now cause the application to abort, matching the behavior concerning FFI boundaries that was (re)introduced in Rustc 1.33. (#6)
* The following functions now take `&self` instead of `&mut self` (#27):
	** `Socket::{dial, listen, recv, send, recv_async, send_async, pipe_notify}`.
	** `Context::{send, recv}`.

=== Removed ===
